# tacrad-cli

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  codestyle.md
src/: Clipboard.h  CmdInv.h  Config.h  Debug.h  Exec.h  Exec.inl  Music.h  Preamble.h  Screen.h  Style.h  Utility.h  main.cpp
src/components/: Console.h  Playlist.h  StatusBar.h  TabContainer.h  TabSelect.h  Terminal.h  UI.h
src/exec/: tacrad_bash  tacrad_cmd.bat  tacrad_wt.bat
